--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "cleanUrls": true,
   "trailingSlash": false,
   "rewrites": [
-    { "source": "/", "destination": "/public/index.html" }
+    { "source": "/(.*)", "destination": "/public/$1" }
   ]
 }
 
